<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/titulo"
            android:layout_width="367dp"
            android:layout_height="47dp"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle"
            android:ems="8"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColorHint="#2C2C2C"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/autor"
            android:layout_width="367dp"
            android:layout_height="47dp"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle"
            android:ems="8"
            android:hint="@string/author"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColorHint="#2C2C2C"
            android:textStyle="italic" />

        <RadioGroup
            android:id="@+id/printType"
            android:layout_width="371dp"
            android:layout_height="52dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RBLibros"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                android:checked="true"
                android:text="@string/books"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RBRevistas"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rectangle2"
                android:text="@string/magazines"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/RBAmbos"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle2"
                android:text="@string/both"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle3"
            android:text="@string/find"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="412dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>